fixed mobile overflow

--- a/styles.css
+++ b/styles.css
@@ -161,16 +161,18 @@ nav {
     opacity: 0;
     visibility: hidden;
     transition: all 300ms ease;
+    overflow: hidden;
 }
 
 .menu--open .mobile__backdrop {
     display: flex;
     visibility: visible;
     opacity: 1;
+
 }
 
 .menu--open {
-    height: 100vh;
+    height: 100%;
     overflow-y: hidden;
 }
 
